# Fiffy

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  main.rs
src/: lib.rs  main.rs
