[package]
name = "fiffy"
version = "0.1.5"
authors = ["Sean Prashad <S.Prashad@outlook.com>", "Marco Beltempo <marco.beltempo@gmail.com>"]
description = "A Rust library intended for simple file processing"
repository = "https://github.com/SeanPrashad/Fiffy"
readme = "README.md"
license = "MIT"

[dependencies]
rust-crypto = "^0.2"
clippy = {version = "0.0.175", optional = true}

[features]
default = []
