[package]
name = "fiffy"
version = "0.1.8"
authors = ["Sean Prashad <S.Prashad@outlook.com>", "Marco Beltempo <Marco.Beltempo@gmail.com>", "Dan Epstein <>"]
description = "A Rust library intended for simple file processing"
repository = "https://github.com/SeanPrashad/Fiffy"
readme = "README.md"
license = "MIT"

[dependencies]
rust-crypto = "^0.2"
clippy = {version = "0.0.175", optional = true}

[features]
default = []
